[package]
name = "azure-mqtt"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
license = "MIT" 
homepage = "blog.x5ff.xyz"
readme = "README.md"
edition = "2018"

[dependencies]
mqtt-protocol = "0.9"
native-tls = "0.2"
clap = "2.33"
toml = "0.5"
serde = "1"
serde_derive = "1"
yahoo_finance_api = {git="https://github.com/xemwebe/yahoo_finance_api.git", rev="0513343847512be829a1064f26cea7e42d575ebe", features = ["blocking"]}
chrono = "0.4"
anyhow = "1.0.33"