[package]
name = "azure-mqtt"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
license = "MIT" 
homepage = "blog.x5ff.xyz"
readme = "README.md"
edition = "2018"

[dependencies]
mqtt-protocol = "0.9"
native-tls = "0.2"
clap = "2.33"
toml = "0.5"
serde = "1"
serde_derive = "1"
yahoo_finance_api = "1.0.2"
chrono = "0.4"
anyhow = "1.0"
async-std = {version = "1.6", features = ["unstable", "attributes"]}